docs: ScalingCharacterization §13 — ZGC + dispatcher + VU ramp to find new ceiling
Three threads in one addendum:

1. ZGC (sweep #8): mild regression vs G1 across every percentile
   (p95 +98%, load1 +30%); reverted to G1 + 70% heap. The 5.96s tail
   outlier in sweep #7 was almost certainly not GC.

2. SessionEventDispatcher (sweep #9): wash on perf within run-to-run
   noise (RPS 219 → 218, p95 68ms → 95ms), positive on correctness
   (per-engine listener registration replaces per-session, eliminating
   the leak source). Kept.

3. VU ramp (N=300/500/650/800):
   - N=500: linear scaling — 357 RPS, p95 228ms, all checks pass
   - N=650: degradation knee — RPS DROPS to 296, p95 2.25s, 305
     search failures (2%), one /api/health timeout, load1 46.22
   - N=800: queueing collapse — RPS 156, p95 18.65s, 1082 search
     failures (8%), 4 /api/health non-2xx, load1 LOWER (31.6) than
     N=650 (classic "too saturated to keep runnable threads moving")

New effective steady-state ceiling: N=500. Cumulative session wins
vs start: RPS 40 → 357 @ peak (~9×), median ~1140ms → 1.66ms (~700×),
p95 1.14s → 95ms.

Next-round suspects: Tomcat maxThreads=400 saturation, DBCP=60
saturation, or some not-yet-visible contention at the N=650 knee.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>